# ml-course

./: .gitignore  README.md  pyproject.toml
Class01_naive_bayes/: Class01_ha_knn.ipynb  Class01_practice_naive_bayes.ipynb
Class02_linear_regression_and_classification/: Class02_linear_regression_and_sgd.ipynb
Class03_linear_classification/: Class03_intro_to_pytorch.ipynb  Class03_logreg_intro_to_pytorch.ipynb
Class04_SVM/: Class04_SVM_practice.ipynb  Class04_pictures_svd.ipynb
Class05_classic_CV/: Class_05_classic_cv_practice.ipynb  Class_05_home_assignment_classification.ipynb  my_answer.pkl  my_answer_cesar.pkl  remove_similar_lines.py
